[tool.poetry]
name = "poetrytest"
version = "0.1.0"
description = ""
authors = ["libochen <libochen@sjtu.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.111.0"


[[tool.poetry.source]]
name = "sjtug"
url = "https://mirror.sjtu.edu.cn/pypi/web/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

